--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -32,7 +32,8 @@ body {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px auto;
   padding: 0 24px;
 }
@@ -73,11 +74,16 @@ body {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-out 0.4s forwards;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--surface-color-hover);
 }
 
 #switch span {
@@ -153,4 +159,33 @@ footer {
 }
 a {
   color: var(--text-color);
+}
+
+/*media queries*/
+
+@media (min-widht: 700px) {
+  :root {
+    --bg-url: url(./pink\ and\ black.jpg) .light {
+      --bg-url: url(./white\ pink.jpg);
+    }
+  }
+}
+
+/*animation*/
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
